# pyMOR

./: .appveyor.yml  CMakeLists.txt  LICENSE  README.md  setup.py
.github/workflows/: conda.yml
HRPD/: CMakeLists.txt  ProjDynTypeDef.h
HRPD/ProjUtils/: CMakeLists.txt  ProjDynMeshSampler.cpp  ProjDynMeshSampler.h  ProjDynTetGen.cpp  ProjDynTetGen.h  ProjDynUtil.cpp  ProjDynUtil.h  STVD.cpp  STVD.h  StopWatch.cpp  StopWatch.h
HRPD/core/: CMakeLists.txt  ProjDynConstraints.cpp  ProjDynConstraints.h  ProjDynRHSInterpol.cpp  ProjDynRHSInterpol.h  ProjDynSimulator.cpp  ProjDynSimulator.h  predicates.cxx
conda.recipe/: meta.yaml
docs/: Makefile  conf.py  index.rst  make.bat  pymor.rst
python/: CMakeLists.txt  ProjDynMeshSampler2.h  main.cpp  pyMOR.h
tests/: test.py
